@@ -1,6 +1,6 @@
 package com.jake.messagesystem.handler;
 
-import com.jake.messagesystem.dto.Message;
+import com.jake.messagesystem.dto.websocket.outbound.MessageRequest;
 import com.jake.messagesystem.service.TerminalService;
 import com.jake.messagesystem.util.JsonUtil;
 import jakarta.websocket.Session;
@@ -12,14 +12,14 @@ public class WebSocketSender {
         this.terminalService = terminalService;
     }
 
-    public void sendMessage(Session session, Message message) {
+    public void sendMessage(Session session, MessageRequest message) {
         if (session != null && session.isOpen()) {
-            JsonUtil.toJson(message).ifPresent(msg -> {
-                try {
-                    session.getBasicRemote().sendText(msg);
-                } catch (Exception e) {
-                    terminalService.printSystemMessage(String.format("%s send failed. error: %s", msg, e.getMessage()));
-                }
+            JsonUtil.toJson(message).ifPresent(payload -> {
+                session.getAsyncRemote().sendText(payload, result -> {
+                    if (!result.isOK()) {
+                        terminalService.printSystemMessage("'%s' send failed. cause: %s".formatted(payload, result.getException()));
+                    }
+                });
             });
         }
     }
